[gd_scene load_steps=12 format=2]

[ext_resource path="res://PlayerBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://AIBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://AIBar.gd" type="Script" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://particle.png" type="Texture" id=6]
[ext_resource path="res://font_s16.tres" type="DynamicFont" id=7]
[ext_resource path="res://title_screen/GameEnd.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 350 )

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Main" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="background" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="background"]
position = Vector2( 512, 0 )
points = PoolVector2Array( 0, 0, 0, 600 )
default_color = Color( 0.670588, 0.670588, 0.670588, 1 )
texture_mode = 1

[node name="PlayerBar" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 300 )

[node name="AIBar" parent="." instance=ExtResource( 3 )]
pause_mode = 1
position = Vector2( 1024, 300 )
script = ExtResource( 4 )

[node name="TopWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2( 512, 30 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="TopWall"]
self_modulate = Color( 0.670588, 0.670588, 0.670588, 1 )
position = Vector2( 512, 30 )
scale = Vector2( 128, 7.5 )
texture = ExtResource( 6 )

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2( 0, 540 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2( 512, 30 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="BottomWall"]
self_modulate = Color( 0.670588, 0.670588, 0.670588, 1 )
position = Vector2( 512, 30 )
scale = Vector2( 128, 7.5 )
texture = ExtResource( 6 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 512, 300 )

[node name="AIGoal" type="StaticBody2D" parent="."]
position = Vector2( -50, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AIGoal"]
shape = SubResource( 3 )

[node name="PlayerGoal" type="StaticBody2D" parent="."]
position = Vector2( 1074, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerGoal"]
shape = SubResource( 3 )

[node name="Global UI" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Global UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Global UI/VBoxContainer"]
margin_right = 251.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="Global UI/VBoxContainer/HBoxContainer"]
margin_right = 208.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Player Score: "

[node name="Playernumber" type="Label" parent="Global UI/VBoxContainer/HBoxContainer"]
pause_mode = 2
unique_name_in_owner = true
margin_left = 212.0
margin_right = 251.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 7 )
text = "xxx"

[node name="HBoxContainer2" type="HBoxContainer" parent="Global UI/VBoxContainer"]
margin_top = 24.0
margin_right = 251.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="Global UI/VBoxContainer/HBoxContainer2"]
margin_right = 208.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 7 )
text = "Computer score: "

[node name="AInumber" type="Label" parent="Global UI/VBoxContainer/HBoxContainer2"]
pause_mode = 2
unique_name_in_owner = true
margin_left = 212.0
margin_right = 251.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 7 )
text = "xxx"

[node name="goalparticles" type="CPUParticles2D" parent="."]
pause_mode = 2
emitting = false
amount = 128
lifetime = 1.3
one_shot = true
explosiveness = 0.9
texture = ExtResource( 6 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.8
angular_velocity = 100.0
angular_velocity_random = 1.0
damping = 100.0
damping_random = 0.8
color_ramp = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameEnd" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -6.0
bus = "goalsfx"

[connection signal="AI_point" from="Ball" to="." method="_on_Ball_AI_point"]
[connection signal="player_point" from="Ball" to="." method="_on_Ball_player_point"]
[connection signal="spawn_speed_powerup" from="Ball" to="." method="_on_Ball_spawn_speed_powerup"]

[editable path="CanvasLayer/GameEnd"]
